--- a/package.json
+++ b/package.json
@@ -3,10 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@apollo/client": "^3.5.6",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
     "apollo-server": "^3.5.0",
+    "babel": "^6.23.0",
     "body-parser": "^1.19.1",
     "dotenv": "^10.0.0",
     "express": "^4.17.2",
@@ -45,6 +47,7 @@
     ]
   },
   "devDependencies": {
+    "@babel/preset-react": "^7.16.7",
     "autoprefixer": "^10.4.0",
     "nodemon": "^2.0.15",
     "postcss": "^8.4.5",
