--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "start-api": "nodemon api.js"
+    "start-api": "nodemon apollo_server/index.js "
   },
   "eslintConfig": {
     "extends": [
