--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.2",
     "graphql": "^15.8.0",
+    "graphql-scalars": "^1.14.1",
     "history": "^5.2.0",
     "mongoose": "^6.1.4",
     "react": "^17.0.2",
