--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
     "apollo-server": "^3.5.0",
+    "axios": "^0.24.0",
     "babel": "^6.23.0",
     "body-parser": "^1.19.1",
     "dotenv": "^10.0.0",
